[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jiigglecoord"
version = "0.0.1"
authors = [
  { name="Silvio Sopic", email="silvio.sopic@gmail.com" },
]
description = "A Python package to introduce slight perturbations to coordinates."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ssopice/JiiggleCoord"
"Bug Tracker" = "https://github.com/ssopic/JiiggleCoord/issues"

[project.optional-dependencies]
dev = [
    "pytest"
]

dependencies = [
    "pandas",
    "folium",
    "geopy",
]