[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "JiggleCoord"
version = "0.0.1"
authors = [
    { name="Silvio Sopic", email="silvio.sopic@gmail.com" },
]
description = "A Python package to introduce slight perturbations to coordinates."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ssopic/JiggleCoord"
"Bug Tracker" = "https://github.com/ssopic/JiggleCoord/issues"

[project.dependencies]
# Dependencies should be in a separate table, not nested under optional-dependencies
pandas = ">=1.0.0"  # It's good practice to pin versions for predictability
folium = ">=0.12.1"
geopy = ">=2.2.0"

[project.optional-dependencies]
dev = [
    "pytest",
    # It's a good practice to include a build tool like hatch itself here
    "hatchling" 
]

[tool.hatch.build.targets.wheel]
# Correct the package name to match your directory name, ensuring correct casing.
packages = ["JiggleCoord"]
